# src/app/app.routes.ts
@@ -1,21 +1,14 @@
 import { Routes } from '@angular/router';
 import { LoginComponent } from './core/auth/pages/login/login.component';
-import { DeliverableComponent } from './features/deliverable/deliverable.component';
 import { TaskComponent } from './features/task/task.component';
 import { ReportComponent } from './features/report/report.component';
 import { UserComponent } from './features/user/user.component';
-import { DashboardComponent } from './features/dashboard/dashboard.component';
 import { adminstratorRoleGuard, authGuard, professorRoleGuard, studentRoleGuard } from './core/auth/auth.guard';
-import { deliverableResolver, taskResolver, tasksResolver, userResolver } from './shared/services/resolvers.service';
+import { deliverableResolver, reportResolver, taskResolver, tasksResolver, userResolver, usersResolver } from './shared/services/resolvers.service';
 import { TaskDetail } from './features/task-detail/task-detail.component';
 import { DeliverableDetail } from './features/deliverable-detail/deliverable-detail.component';
 import { TaskEntry } from './features/task-entry/task-entry.component';
 export const routes: Routes = [
-  // {
-  //   path: '',
-  //   component: DashboardComponent,
-  //   canActivate: [authGuard],
-  // },
   {
     path: 'login',
     component: LoginComponent,
@@ -47,53 +40,40 @@ export const routes: Routes = [
     canActivate: [authGuard],
     resolve: {
       task: taskResolver,
+      studentUsers: usersResolver,
     },
   },
   {
     path: 'task/new',
     component: TaskEntry,
     canActivate: [authGuard, professorRoleGuard],
+    resolve: {
+      studentUsers: usersResolver,
+    },
   },
   {
     path: 'task/:id',
     component: TaskEntry,
     canActivate: [authGuard, professorRoleGuard],
     resolve: {
-      task: taskResolver
+      task: taskResolver,
+      studentUsers: usersResolver,
     },
   },
   {
-    path: 'deliverable',
-    component: DeliverableComponent,
-    canActivate: [authGuard, professorRoleGuard],
-     resolve: {
-      deliverable: taskResolver,
+    path: 'report/view/:userId/:taskId',
+    component: ReportComponent,
+    canActivate: [authGuard],
+    resolve: {
+      report: reportResolver,
     },
   },
-  // {
-  //   path: 'deliverable/new',
-  //   component: DeliverableEntry,
-  //   canActivate: [authGuard, studentRoleGuard]
-  // },
-  // {
-  //   path: 'deliverable/:id',
-  //   component: DeliverableEntry,
-  //   canActivate: [authGuard],
-  //   resolve: {
-  //     deliverable: deliverableResolver,
-  //   },
-  // },
-  // {
-  //   path: 'report',
-  //   component: ReportComponent,
-  //   canActivate: [authGuard],
-  // },
   {
     path: 'report/:id',
     component: ReportComponent,
     canActivate: [authGuard],
     resolve: {
-      report: deliverableResolver,
+      report: reportResolver,
     },
   },
   {
